# battery-pack

./: .gitignore  Cargo.toml  SYMPOSIUM.toml
.github/workflows/: rust.yml
battery-packs/ci-battery-pack/: README.md
battery-packs/ci-battery-pack/skills/binary-releases/: SKILL.md
battery-packs/ci-battery-pack/skills/github-ci-fundamentals/: SKILL.md
battery-packs/ci-battery-pack/skills/trusted-publishing/: SKILL.md
battery-packs/ci-battery-pack/snippets/github/: ci-pass.yml
battery-packs/ci-battery-pack/src/: lib.rs
battery-packs/ci-battery-pack/src/snapshots/: maximalist.txt  standalone_binary_release.txt
battery-packs/ci-battery-pack/templates/full/: bp-template.toml
battery-packs/error-battery-pack/: CHANGELOG.md  Cargo.toml  README.md
battery-packs/error-battery-pack/skills/: SYMPOSIUM.toml
battery-packs/error-battery-pack/skills/application-errors/: SKILL.md
battery-packs/error-battery-pack/skills/error-handling-basics/: SKILL.md
battery-packs/error-battery-pack/skills/library-errors/: SKILL.md
benchmarks/ci-skills/: EXPECTED.md  README.md  run.sh  setup.sh
benchmarks/error-skills/: EXPECTED.md  README.md  run.sh  setup.sh
md/: using.md
md/spec/: cli.md  manifest.md
src/battery-pack/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-cli/: CHANGELOG.md  Cargo.toml
src/battery-pack/bphelper-manifest/: Cargo.toml
src/cargo-bp/: CHANGELOG.md  Cargo.toml
src/cargo-bp-script/: Cargo.toml  README.md
src/cargo-bp-script/src/: lib.rs  runner.rs  status.rs
src/cargo-bp/tests/: status_json.rs  with_template.rs
(+20 files in other folders)
